--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "benchmark": "^2.1.4",
+    "class-variance-authority": "^0.7.1",
     "classcat": "^5.0.5",
     "tailwind-merge": "^3.3.0",
     "tailwind-variants": "^1.0.0"
