--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "unbuild",
-    "dev": "unbuild --stub",
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "typecheck": "tsc --noEmit",
@@ -48,14 +48,21 @@
   },
   "packageManager": "pnpm@10.6.2",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.15.21",
+    "@types/rollup": "^0.54.0",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "@vitest/coverage-v8": "^3.1.4",
     "eslint": "^9.27.0",
     "jsdom": "^26.1.0",
+    "rollup": "^4.41.1",
+    "rollup-plugin-dts": "^6.2.1",
+    "tslib": "^2.8.1",
     "typescript": "^5.8.3",
-    "unbuild": "^3.5.0",
     "vitest": "^3.1.4"
   },
   "dependencies": {
